<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/stroke_grey"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/edit_profile" />

    <!--    Henning Dodenhof, 2024, CircleImageView    -->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/edit_profile_pic"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:src="@android:drawable/dark_header" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/edit_profile_upload_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/upload_photo" />

        <Button
            android:id="@+id/edit_profile_remove_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/edit_profile_upload_button"
            android:text="@string/remove_photo" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/information" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/name"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/edit_profile_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="text" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/phone_number"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/edit_profile_phone"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="phone" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/email_address"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/edit_profile_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="textEmailAddress" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="GEO-TRACKING"
            android:src="@drawable/nav_map" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="GEO-TRACKING"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/geo_tracking_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:buttonTint="@color/black" />
    </LinearLayout>


    <Button
        android:id="@+id/edit_profile_save_changes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/save_changes" />
</LinearLayout>