<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/stroke_grey">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/nav_left"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="24dp"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/nav_left"
            android:text=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="128dp"
            android:layout_marginEnd="127dp"
            android:text="@string/event"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/trash"
            app:layout_constraintStart_toEndOf="@+id/nav_left"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/trash"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/trash"
            android:text=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/event_cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_corners"
        app:layout_constraintBottom_toTopOf="@+id/event_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout13"
        app:srcCompat="@drawable/item_removed_successfully" />

    <TextView
        android:id="@+id/event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:text="@string/event"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="341dp" />

    <ScrollView
        android:id="@+id/sv_event_details"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/admin_bottom_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_name">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/about"
                android:layout_width="49dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/about"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:ignore="ObsoleteLayoutParam" />

            <TextView
                android:id="@+id/about_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="10dp"
                android:text="@string/LoremIpsum"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/neon"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/location_icon"
                    android:src="@drawable/nav_events" />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/location"
                    android:textColor="@color/black" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/neon"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/time"
                    android:src="@drawable/time" />

                <TextView
                    android:id="@+id/date_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/date_time"
                    android:textColor="@color/black" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/neon"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/neon"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="8dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/share_event_qr_code"
                        android:src="@drawable/scan" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/qr_code"
                        android:textColor="@color/black" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/qr_code_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="8dp"
                    android:src="@drawable/scan" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/neon"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/sign_up"
                    android:src="@drawable/sign_up" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="Sign Ups"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/see_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:fontFamily="@font/inter_semibold"
                    android:paddingRight="8dp"
                    android:text="@string/see_all"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="KeyboardInaccessibleWidget,TouchTargetSizeCheck" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/neon"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/attendance_icon"
                    android:src="@drawable/nav_map" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="20dp"

                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/attendance"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/see_all2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:fontFamily="@font/inter_semibold"
                    android:paddingRight="8dp"
                    android:text="@string/see_all"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="KeyboardInaccessibleWidget,TouchTargetSizeCheck" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="80dp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/remove_cover_button"
        android:layout_width="314dp"
        android:layout_height="55dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/black"
        android:text="@string/remove_cover_photo"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toTopOf="@+id/admin_bottom_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/admin_bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-2dp"
        android:background="@drawable/bottom_nav_stroke"
        android:contentDescription="@string/bottom_nav_content_description"
        app:itemHorizontalTranslationEnabled="false"
        app:itemIconTint="@color/black"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/admin_bottom_nav" />

</androidx.constraintlayout.widget.ConstraintLayout>